# carla_mpc_residual

./: README.md
src/global_planner/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/global_planner/launch/: frenet_converter.launch  frenet_converter.py  global_path_publisher.launch  global_path_publisher.launch.py
src/global_planner/msg/: FrenetPose.msg  WorldPose.msg
src/global_planner/src/: frenet_world_converter.py  global_path_publisher.py
src/global_planner/src/utils/: extract_borders.py  frenet_cartesian_converter.py  test.py
src/global_planner/srv/: Frenet2WorldService.srv  World2FrenetService.srv
src/mpc_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py  test.ipynb
src/mpc_controller/config/: carla_viz.rviz
src/mpc_controller/envs/: mpc_ros_env.py
src/mpc_controller/launch/: mpc_all.launch  mpc_controller.launch  mpcc_all.launch
src/mpc_controller/src/: generate_traffic.py  mpc_controller.py  mpc_controller_mpcc.py  spline_test.py
src/mpc_controller/src/acados_mpc/: acados_settings.py  acados_settings_mpcc.py  acados_settings_old.py  bicycle_model.py  bicycle_model_mpcc.py  bicycle_model_mpcc_cbf.py  bicycle_model_old.py
src/mpc_controller/src/acados_mpc/__pycache__/: acados_settings_mpcc.cpython-38.pyc~Stashed changes  bicycle_model_mpcc.cpython-38.pyc~Stashed changes
src/mpc_controller/src/utils/: convert_traj_track.py
src/mpc_gym/: CMakeLists.txt  package.xml
src/mpc_gym/envs/: mpc_ros_env.py
